--- a/new.html
+++ b/new.html
@@ -30,12 +30,13 @@
 <body>
 <h1 class="a">我是韩一冉</h1>
 <p>咕</p>
-<p><a href="王.jpg" target="_blank">
-    <img src="韩.jpg" alt="我是韩一冉" width="300" height="200">
+<p><a href="咕/王.jpg" target="_blank">
+    <img src="咕/韩.jpg" alt="我是韩一冉" width="300" height="200">
 </a></p>
 <p class="b"><b>点图片查看高清大图</b></p>
 <p class="c"><a href="https://www.bilibili.com/video/BV1Ek87zkEdE/?spm_id_from=333.1387.homepage.video_card.click&vd_source=47b946c79b1d7f4d8178c9b6118fba6a" target="_blank">
     彩蛋
 </a></p>
 </body>
+
 </html>
