--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <body>
 <h1 class="a">我是韩一冉</h1>
 <p>咕</p>
-<a href="/web/王.jpg" alt="我是韩一冉" title="我是韩一冉" target="_blank">
-    <img src="/web/韩.jpg" alt="我是韩一冉" width="300" height="200">
+<a href="/-/王.jpg" alt="我是韩一冉" title="我是韩一冉" target="_blank">
+    <img src="/-/韩.jpg" alt="我是韩一冉" width="300" height="200">
 </a>
 <p class="b"><b>点图片查看高清大图</b></p>
 <a class='caidan' href="https://www.bilibili.com/video/BV1Ek87zkEdE/?spm_id_from=333.1387.homepage.video_card.click&vd_source=47b946c79b1d7f4d8178c9b6118fba6a" target="_blank">
